# Retrieval-based-Voice-Conversion-WebUI

./: .gitignore  app.py  gui_v0.py  gui_v1.py  guidml.py  infer-web.py  justfile  pyproject.toml  requirements.txt  rvc_for_realtime.py  rvcgui.py  values1.json  venv.sh
lib/i18n/: en_US.json  es_ES.json  it_IT.json  ja_JP.json  ru-RU.json  tr_TR.json  zh_CN.json  zh_HK.json  zh_SG.json
